--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,16 @@
 services:
   app:
     build: .
-    container_name: app
+    container_name: securenet-main
     restart: always
     networks:
       - web
     labels:
       - 'traefik.enable=true'
-
-      # glavni domen
-      - 'traefik.http.routers.app.rule=Host(`securenet.rs`)'
-      - 'traefik.http.routers.app.entrypoints=websecure'
-      - 'traefik.http.routers.app.tls.certresolver=myresolver'
-
-      # port na kojem app sluša UNUTAR kontejnera
-      - 'traefik.http.services.app.loadbalancer.server.port=3000'
-
-      # www -> apex redirekcija
-      - 'traefik.http.routers.www.rule=Host(`www.securenet.rs`)'
-      - 'traefik.http.routers.www.entrypoints=websecure'
-      - 'traefik.http.routers.www.tls.certresolver=myresolver'
-      - 'traefik.http.routers.www.middlewares=redirect-to-apex@docker'
-      - "traefik.http.middlewares.redirect-to-apex.redirectregex.regex=^https?://www\\.securenet\\.rs/(.*)"
-      - 'traefik.http.middlewares.redirect-to-apex.redirectregex.replacement=https://securenet.rs/$$1'
-      - 'traefik.http.middlewares.redirect-to-apex.redirectregex.permanent=true'
+      - 'traefik.http.routers.vue.rule=Host(`securenet.rs`)'
+      - 'traefik.http.routers.vue.entrypoints=websecure'
+      - 'traefik.http.routers.vue.tls.certresolver=myresolver'
+      - 'traefik.http.services.vue.loadbalancer.server.port=80'
 
 networks:
   web:
