--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: .
     container_name: securenet-main
     restart: always
+    ports:
+      - "8081:8000"
     networks:
       - web
 
